k8s/nodeapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nodeapi
  name: nodeapi
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: 8888-tcp
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: nodeapi
status:
  loadBalancer: {}
