k8s/sword-test-api-sword-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sword-test-api-sword
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sword-test-api-sword: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sword-test-api-sword: "true"
